# cpp-test

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  conanfile.py  gcc_arm_toolchain.cmake  llvm_arm_toolchain.cmake
app/: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
cmake/: clang-11_arm-linux-gnueabihf_toolchain.cmake  gcc_arm-cortex_a8-linux-gnueabihf_toolchain.cmake  gcc_arm-linux-gnueabihf_toolchain.cmake  llvm_arm_toolchain.cmake
conan-profiles/: arm_gcc_cortex_a8  bb_armhf_release  bb_clang_12_release  bb_cortex_a8_release  x86_64_clang_11  x86_64_gcc_9
profiles/: bb_armhf_release  linux_clang_12_release
src/: CMakeLists.txt  main.cpp  mylib.cpp  mylibConfig.cmake.in
src/include/mylib/: mylib.hpp
test/: main.cpp
tests/: CMakeLists.txt  main.cpp
